fix z-index btns renamed composer package -> pehapkari-alpha

--- a/client-side/src/less/inline.less
+++ b/client-side/src/less/inline.less
@@ -37,6 +37,7 @@
   border: none;
   cursor: pointer;
   transition: background-color 0.5s ease;
+  z-index: 100000;
 
   &.inline-hidden {
     display: none;
